--- a/d'Julia/pruebacss.css
+++ b/d'Julia/pruebacss.css
@@ -1659,7 +1659,7 @@ button[type="submit"]:hover {
 }
 
 footer {
-    background-color: #cb9772;
+    background-color: #c2185b;
     color: white;
     text-align: center;
     padding: 20px;  
